# ai-azeez_backend

./: pyproject.toml
app/: config.py  database.py  main.py  oauth2.py
app/models/: chat.py  users.py
app/routers/: conversation.py  login.py  user.py
app/schemas/: auth.py  chat.py
app/utils/: email.py  otp_code.py
