[project]
name = "ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.13.4",
    "resend>=2.30.1",
    "sqlalchemy>=2.0.50",
    "uuid>=1.30",
    "uvicorn>=0.48.0",
]
