[project]
name = "ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "python-jose>=3.5.0",
    "resend>=2.30.1",
    "sqlalchemy>=2.0.50",
    "uuid>=1.30",
    "uvicorn>=0.48.0",
]
